# src/main/java/com/oraskin/chat/key/value/RegisterPrivateChatKeyRequest.java
@@ -1,0 +1,9 @@
+package com.oraskin.chat.key.value;
+
+public record RegisterPrivateChatKeyRequest(
+        String keyId,
+        String publicKey,
+        String algorithm,
+        String format
+) {
+}
