# src/main/java/com/oraskin/chat/repository/entity/PrivateMessageRecord.java
@@ -1,0 +1,11 @@
+package com.oraskin.chat.repository.entity;
+
+import com.oraskin.chat.privatechat.value.EncryptedPrivateMessagePayload;
+
+public record PrivateMessageRecord(
+        long chatId,
+        String senderUserId,
+        EncryptedPrivateMessagePayload encryptedMessage,
+        String timestamp
+) {
+}
