# src/main/java/com/oraskin/chat/value/ChatType.java
@@ -1,0 +1,6 @@
+package com.oraskin.chat.value;
+
+public enum ChatType {
+    DIRECT,
+    PRIVATE
+}
