# src/main/java/com/oraskin/resource/ChatsController.java
@@ -3,6 +3,7 @@ package com.oraskin.resource;
 import com.oraskin.chat.service.ChatService;
 import com.oraskin.chat.value.ChatSummary;
 import com.oraskin.common.auth.AuthenticatedUser;
+import com.oraskin.common.http.QueryParams;
 import com.oraskin.common.mvc.annotation.RequestMapping;
 import com.oraskin.common.mvc.annotation.RequestParam;
 import com.oraskin.common.mvc.annotation.RestController;
@@ -19,8 +20,8 @@ public final class ChatsController {
     }
 
     @RequestMapping(method = "GET")
-    public List<ChatSummary> getChats(AuthenticatedUser user) {
-        return chatService.findChatsForUser(user.userId());
+    public List<ChatSummary> getChats(AuthenticatedUser user, QueryParams queryParams) {
+        return chatService.findChatsForUser(user.userId(), queryParams.get("keyId"));
     }
 
     @RequestMapping(method = "POST")
