# src/main/java/com/oraskin/websocket/WebSocketCommandType.java
@@ -3,6 +3,7 @@ package com.oraskin.websocket;
 public enum WebSocketCommandType {
     PRESENCE,
     MESSAGE,
+    PRIVATE_MESSAGE,
     TYPING_START,
     TYPING_END
 }
